--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/* post */
+/* width="701" height="454" */
+
 * {
   padding: 0;
   margin: 0;
@@ -163,9 +166,11 @@ input[type="submit"] {
   cursor: pointer;
 }
 
-.post_card {
-  /* width: 100%; */
-  height: auto;
+.svg_container {
+  max-width: 900px;
+  max-height: 454px;
+  width: 100%;
+  height: 100%;
 }
 
 .first_wrapper {
