--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,13 @@ a {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   /* -webkit-tap-highlight-color: white; */
 }
+input,
+textarea,
+button,
+select,
+a :focus {
+  outline: none !important;
+}
 
 .nav_section {
   /* height: 91px; */
@@ -61,6 +68,7 @@ a {
 
 .line {
   border: 1px solid #1877f2;
+  background-color: #1877f2;
 }
 
 button[type="submit1"] {
