--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   overflow-x: hidden;
   background-color: white;
 }
@@ -41,6 +41,7 @@ a {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   /* -webkit-tap-highlight-color: white; */
 }
+
 input,
 textarea,
 button,
@@ -63,7 +64,8 @@ a :focus {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 100px;
+  /* padding: 20px 100px; */
+  padding: 20px 10%;
 }
 
 .line {
@@ -112,13 +114,15 @@ button[type="submit1"] {
   box-sizing: border-box;
   border-radius: 40px;
   margin-left: 29px;
-  margin-right: 29px;
+  /* margin-right: 29px; */
   margin-top: 40px;
 }
 
 .signup_inner_container {
   margin-left: 20px;
+  margin-right: 10px;
   margin-top: 24px;
+  margin-bottom: 24px;
 }
 
 .coin_title {
@@ -177,7 +181,7 @@ input[type="submit"] {
 .svg_container {
   /* max-width: 900px; */
   max-width: 850px;
-  max-height: 454px;
+  max-height: 554px;
   width: 100%;
   height: 100%;
 }
@@ -187,19 +191,23 @@ input[type="submit"] {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 50px 5%;
+  margin: 50px 10%;
 }
+/* .second_wrapper {
+  margin-right: 200px;
+} */
 
 .third_wrapper {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 0px 7%;
+  margin: 0px 10%;
 }
 
 .summary_heading {
-  font-size: clamp(14px, 1vw, 18px);
+  /* font-size: clamp(14px, 1vw, 18px); */
+  font-size: clamp(14px, 1vw, 38px);
   line-height: clamp(22px, 1vw, 30px);
 }
 .green_text {
@@ -212,57 +220,79 @@ input[type="submit"] {
   margin-bottom: 50px;
 }
 .early_heading_first {
-  font-size: 17px;
-  line-height: 29px;
+  /* font-size: 17px; */
+  font-size: clamp(17px, 1vw, 30px);
+  line-height: clamp(22px, 1vw, 96px);
+  /* line-height: 29px; */
   font-weight: bold;
   color: #3f2d3b;
 }
 .early_heading_second {
-  font-size: 24px;
-  line-height: 29px;
+  /* font-size: 24px; */
+  font-size: clamp(24px, 1vw, 35px);
+  line-height: clamp(22px, 1vw, 96px);
+
+  /* line-height: 29px; */
   font-weight: bold;
   color: #3f2d3b;
 }
 .early_heading_third {
-  font-size: 15px;
-  line-height: 29px;
+  /* font-size: 15px; */
+  font-size: clamp(15px, 1vw, 25px);
+  line-height: clamp(22px, 1vw, 96px);
+  /* line-height: 29px; */
   font-weight: 500;
   color: #1d915c;
 }
 
-@media screen and (max-width: 1110px) {
-  .post_card {
-    width: 900px;
-    height: auto;
+@media screen and (min-width: 2000px) {
+  .early_heading {
+    margin-right: 10%;
   }
+  .first_wrapper {
+    margin: 50px 15%;
+  }
+  .third_wrapper {
+    margin: 0px 15%;
+  }
+  .nav_section_inner {
+    padding: 20px 15%;
+  }
+}
+
+@media screen and (max-width: 1110px) {
   .first_wrapper {
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
+    /* flex-direction: row; */
     align-items: center;
-    /* margin: 100px 5%; */
+  }
+  .second_wrapper {
+    margin-bottom: 20px;
   }
   .nav_section_inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 10px;
+    padding: 20px 10%;
   }
   .early_heading {
     text-align: center;
     margin-right: 0%;
   }
 }
+@media screen and (max-width: 1744px) and (min-width: 1110px) {
+  /* .svg_container {
+    max-width: 850px;
+    max-height: 554px;
+  } */
+  /* .signup_container {
+    width: 393px;
+  } */
+}
 
 @media screen and (max-width: 480px) {
-  .post_card {
-    width: 340px;
-    height: auto;
-  }
   .first_wrapper {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
   }
   .third_wrapper {
     display: flex;
@@ -282,5 +312,8 @@ input[type="submit"] {
   }
   .svg_container {
     margin-top: 30px;
+  }
+  .nav_section_inner {
+    padding: 20px 3%;
   }
 }
