--- a/css/style.css
+++ b/css/style.css
@@ -182,8 +182,9 @@ input[type="submit"] {
 
 .svg_container {
   /* max-width: 900px; */
-  max-width: 850px;
-  max-height: 554px;
+  /* max-height: 554px; */
+  max-width: 700px;
+  max-height: 500px;
   width: 100%;
   height: 100%;
 }
