--- a/css/style.css
+++ b/css/style.css
@@ -166,18 +166,25 @@ input[type="text"].mobileno::-webkit-input-placeholder {
 }
 
 input[type="submit"] {
-  width: 131px;
+  /* width: 131px; */
   background: #1877f2;
   border-radius: 50px;
   color: white;
   font-family: Montserrat;
   font-weight: bold;
-  font-size: 12px;
+  font-size: clamp(12px, 1vw, 18px);
   line-height: 12px;
-  padding: 10px;
+  padding: 15px 20px;
   margin: 10px 0;
   border: none;
   cursor: pointer;
+  text-align: center;
+  /* font-size: 12px; */
+  /* line-height: 12px;
+  padding: 10px;
+  margin: 10px 0;
+  border: none;
+  cursor: pointer; */
 }
 
 .svg_container {
