--- a/css/style.css
+++ b/css/style.css
@@ -218,9 +218,6 @@ input[type="submit"] {
   align-items: center;
   margin: 50px 10%;
 }
-/* .second_wrapper {
-  margin-right: 200px;
-} */
 
 .reward_wrapper {
   flex: 1;
@@ -250,7 +247,7 @@ input[type="submit"] {
   /* font-size: clamp(14px, 1vw, 18px); */
   font-weight: 400;
   font-size: clamp(14px, 1vw, 38px);
-  line-height: clamp(22px, 1vw, 30px);
+  line-height: clamp(22px, 1vw, 37px);
   color: #ffffff;
 }
 
@@ -260,6 +257,10 @@ input[type="submit"] {
   justify-content: center;
   align-items: center;
   /* text-align: center; */
+}
+.vip_img,
+.brand_img {
+  margin-left: 8px;
 }
 .reward_heading {
   font-weight: 600;
@@ -305,6 +306,121 @@ input[type="submit"] {
   color: #1d915c;
 }
 
+.middle_container {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-left: 15%;
+  margin-right: 0%;
+}
+.screen {
+  max-width: 623px;
+  max-height: 778px;
+  width: 100%;
+  height: 100%;
+}
+.four_container {
+  padding: 20px 90px;
+  background-color: #ecf0f3;
+  flex: 0.75;
+  width: 100%;
+  height: 100%;
+}
+.first_row,
+.second_row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 65px;
+}
+.first_container,
+.third_container,
+.fourth_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: #293c4b;
+  border-radius: 30px;
+  /* max-width: 309px; */
+  height: 309px;
+  padding: 20px;
+  position: relative;
+}
+.second_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: #293c4b;
+  border-radius: 30px;
+  height: 309px;
+  padding: 20px 35px;
+  position: relative;
+}
+.second_container,
+.fourth_container {
+  margin-left: 25px;
+}
+.first_container,
+.third_container {
+  margin-right: 25px;
+}
+.container_heading {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 30px;
+  /* font-weight: bold; */
+  color: #fdd015;
+  margin-bottom: 20px;
+}
+.container_subheading {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  /* font-weight: bold; */
+  color: #ffffff;
+  margin-bottom: 10px;
+}
+.increase {
+  position: absolute;
+  bottom: -30px;
+}
+.follow {
+  background-color: #1877f2;
+  border-radius: 30px;
+  padding: 5px 30px;
+  color: #ffffff;
+  position: absolute;
+  bottom: -18px;
+}
+.no_of_coins {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+}
+.second_inner_container {
+  background: #293c4b;
+  border: 1px solid #fdd015;
+  border-radius: 20px;
+  padding: 10px 30px;
+  position: absolute;
+  bottom: -20px;
+}
+.no_of_coins {
+  font-weight: 400;
+  font-size: 20px;
+  color: #ffffff;
+}
+.coins {
+  font-weight: 400;
+  font-size: 10px;
+  color: #958e97;
+}
+
 @media screen and (min-width: 2000px) {
   .early_heading {
     /* margin-right: 10%; */
@@ -337,14 +453,71 @@ input[type="submit"] {
     text-align: center;
     margin-right: 0%;
   }
+
+  .screen {
+    max-width: 1900px;
+    max-height: 1000px;
+    width: 100%;
+    height: 100%;
+  }
+
+  .middle_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 0%;
+    margin-right: 0%;
+  }
+  .four_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .first_row,
+  .second_row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .second_container,
+  .fourth_container {
+    margin-left: 0px;
+    margin-top: 50px;
+  }
+  .first_container,
+  .third_container {
+    margin-right: 0px;
+  }
+  .first_container {
+    margin-top: 20px;
+  }
+  .four_container {
+    padding: 10px 30px;
+  }
 }
 @media screen and (max-width: 1744px) and (min-width: 1110px) {
-  /* .svg_container {
-    max-width: 850px;
-    max-height: 554px;
-  } */
-  /* .signup_container {
-    width: 393px;
+  .middle_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 0%;
+    margin-right: 0%;
+  }
+  .screen {
+    max-width: 1900px;
+    max-height: 1000px;
+    width: 100%;
+    height: 100%;
+  }
+  /* .second_container,
+  .fourth_container {
+    margin-left: 220px;
+    margin-top: 50px;
+  }
+  .first_container,
+  .third_container {
+    margin-right: 220px;
   } */
 }
 
@@ -356,17 +529,17 @@ input[type="submit"] {
     /* align-items: center; */
   }
   .reward_wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    margin: 20px 10px;
-  }
-  .reward_inner_wrapper {
     flex: 1;
     display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    padding: 70px 0px;
+    margin: 0px 5px;
+  }
+  .reward_inner_wrapper {
+    flex: 0.5;
+    display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
     align-items: center;
     margin-bottom: 20px;
   }
@@ -392,5 +565,39 @@ input[type="submit"] {
   .signup_container {
     margin-left: 15px;
     margin-right: 5px;
+  }
+  .middle_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 0%;
+    margin-right: 0%;
+  }
+  .four_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .first_row,
+  .second_row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .second_container,
+  .fourth_container {
+    margin-left: 0px;
+    margin-top: 50px;
+  }
+  .first_container,
+  .third_container {
+    margin-right: 0px;
+  }
+  .first_container {
+    margin-top: 20px;
+  }
+  .four_container {
+    padding: 10px 30px;
   }
 }
