--- a/css/style.css
+++ b/css/style.css
@@ -108,12 +108,14 @@ button[type="submit2"] {
   padding-left: 29px;
 }
 .heading > p {
+  font-style: italic;
+  text-transform: uppercase;
   font-weight: 800;
   font-size: clamp(36px, 8vw, 48px);
   line-height: clamp(44px, 6vw, 59px);
 }
 .heading > p:first-child.heading_text_black {
-  color: #3f2d3b;
+  color: #0c1116;
 }
 .heading > p:last-child.heading_text_green {
   color: #1d915c;
@@ -143,7 +145,7 @@ button[type="submit2"] {
   font-size: 18px;
   /* font-size: clamp(18px, 1vw, 18px); */
   line-height: 22px;
-  color: #3f2d3b;
+  color: #0c1116;
 }
 .account_label {
   font-size: 12px;
@@ -152,6 +154,83 @@ button[type="submit2"] {
   color: #72686f;
   margin-top: 10px;
 }
+
+.otp {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+.otp-content {
+  position: relative;
+  margin: auto auto;
+  padding: 20px;
+  background: #ffffff;
+  border: 1px solid #1877f2;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 414px;
+}
+
+.close {
+  position: absolute;
+  top: 5px;
+  right: 15px;
+  color: #aaaaaa;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+.otp_text {
+  margin-top: 40px;
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 151.5%;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-transform: capitalize;
+  color: #3f2d3b;
+}
+.seconds {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-transform: capitalize;
+  color: #72686f;
+  margin-top: 30px;
+}
+.resend_otp {
+  font-weight: 500;
+  font-size: 9px;
+  line-height: 11px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-transform: capitalize;
+  color: #72686f;
+  margin-bottom: 30px;
+}
+/*  */
 
 input[type="text"],
 select {
@@ -165,7 +244,8 @@ select {
   border: none;
 }
 
-input[type="text"].mobileno::-webkit-input-placeholder {
+input[type="text"].mobileno,
+.otp_input::-webkit-input-placeholder {
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
@@ -281,7 +361,7 @@ input[type="submit"] {
   font-size: clamp(24px, 1vw, 28px);
   line-height: clamp(36px, 1vw, 42px);
   /* font-weight: bold; */
-  color: #3f2d3b;
+  color: #0c1116;
 }
 .early_heading_second {
   /* font-size: 24px; */
@@ -290,7 +370,7 @@ input[type="submit"] {
   font-size: clamp(48px, 1vw, 68px);
   line-height: clamp(72px, 1vw, 90px);
   /* font-weight: bold; */
-  color: #3f2d3b;
+  color: #0c1116;
   margin: 5px 0px;
 }
 .early_heading_third {
@@ -314,6 +394,61 @@ input[type="submit"] {
 .screen {
   max-width: 623px;
   max-height: 778px;
+  width: 100%;
+  height: 100%;
+}
+.wave_container {
+  /* position: relative;
+  display: block; */
+  /* width: 100%;
+  height: 100%; */
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  margin: 10% 0%;
+  overflow: hidden;
+}
+.wave1 {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+}
+.bubble_Container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+}
+.bubble_Container1,
+.bubble_Container2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.bubble_Container1 {
+  margin-bottom: 5%;
+}
+.bubble1_container,
+.bubble3_container {
+  margin-right: 5%;
+}
+.bubble1,
+.bubble2,
+.bubble3,
+.bubble4 {
+  width: 100%;
+  height: 100%;
+  max-width: 700px;
+  max-height: 500px;
+}
+.bubble1_container,
+.bubble3_container,
+.bubble2_container,
+.bubble4_container {
+  /* max-width: 700px;
+  max-height: 500px; */
   width: 100%;
   height: 100%;
 }
@@ -427,7 +562,7 @@ input[type="submit"] {
   font-weight: bold;
   font-size: 48px;
   line-height: 30px;
-  color: #3f2d3b;
+  color: #0c1116;
   align-self: center;
 }
 .people {
@@ -712,5 +847,23 @@ input[type="submit"] {
     line-height: 30px;
     text-align: center;
     margin: 50px 0px;
+  }
+  .bubble_Container1,
+  .bubble_Container2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .bubble_Container1 {
+    margin-bottom: 0%;
+  }
+  .bubble1_container,
+  .bubble3_container {
+    margin-right: 0%;
+  }
+  .wave_container {
+    width: 100%;
+    height: 100%;
   }
 }
