--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ input[type="text"].mobileno,
   color: #72686f;
 }
 
-input[type="submit"] {
+button[type="submit"] {
   /* width: 131px; */
   background: #1877f2;
   border-radius: 50px;
