--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
+  overflow: hidden;
 }
 
 html,
@@ -169,9 +170,10 @@ button[type="submit2"] {
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
-.otp-content {
+.otp-content,
+.signup-content {
   position: relative;
-  margin: auto auto;
+  margin: 200px auto;
   padding: 20px;
   background: #ffffff;
   border: 1px solid #1877f2;
@@ -231,7 +233,56 @@ button[type="submit2"] {
   margin-bottom: 30px;
 }
 /*  */
+.signup-content {
+  position: relative;
+  margin: 200px auto;
+  padding: 20px 55px;
+  background: #ffffff;
+  border: 1px solid #1877f2;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  max-width: 414px;
+}
 
+.signup_Heading {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+  text-transform: capitalize;
+  color: #3f2d3b;
+  margin-top: 30px;
+}
+
+.username_label {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 10px;
+  line-height: 15px;
+  color: #1877f2;
+}
+input[type="text"] .first_name_input,
+.last_name_input,
+.user_name_input::-webkit-input-placeholder {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 151.5%;
+  display: flex;
+  align-self: flex-start;
+  text-transform: capitalize;
+  color: #72686f;
+}
+.error_message {
+  font-weight: 500;
+  font-size: 9px;
+  text-transform: capitalize;
+  color: #ee1414;
+}
+/*  */
 input[type="text"],
 select {
   width: 90%;
