--- a/css/style.css
+++ b/css/style.css
@@ -448,29 +448,19 @@ button[type="submit"] {
   width: 100%;
   height: 100%;
 }
+
 .wave_container {
-  /* position: relative;
-  display: block; */
-  /* width: 100%;
-  height: 100%; */
-  display: inline-block;
-  position: relative;
+  display: block;
   width: 100%;
-  margin: 10% 0%;
-  overflow: hidden;
+  /* height: 100%; */
+  background-color: #3e3fc9;
 }
 .wave1 {
   width: 100%;
   height: 100%;
   display: inline-block;
 }
-.bubble_Container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-}
+
 .bubble_Container1,
 .bubble_Container2 {
   display: flex;
@@ -479,7 +469,7 @@ button[type="submit"] {
   align-items: center;
 }
 .bubble_Container1 {
-  margin-bottom: 5%;
+  margin-bottom: -30%;
 }
 .bubble1_container,
 .bubble3_container {
@@ -491,8 +481,8 @@ button[type="submit"] {
 .bubble4 {
   width: 100%;
   height: 100%;
-  max-width: 700px;
-  max-height: 500px;
+  max-width: 1000px;
+  max-height: 700px;
 }
 .bubble1_container,
 .bubble3_container,
@@ -502,8 +492,59 @@ button[type="submit"] {
   max-height: 500px; */
   width: 100%;
   height: 100%;
+  position: relative;
 }
-.four_container {
+.bubble1_container,
+.bubble2_container {
+  top: -400px;
+}
+.bubble3_container,
+.bubble4_container {
+  bottom: -400px;
+}
+.container_heading {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 30px;
+  color: #ffffff;
+  margin-bottom: 20px;
+  text-align: center;
+  position: absolute;
+  top: 20%;
+  left: 37%;
+  transform: translate(-20%, -37%);
+}
+.container_subheading {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #ffffff;
+  margin-bottom: 10px;
+  text-align: center;
+  position: absolute;
+  top: 35%;
+  left: 35%;
+  transform: translate(-35%, -35%);
+}
+.Grow_network {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-70%, -50%);
+}
+.networth {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-70%, -50%);
+}
+.growth {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-70%, -50%);
+}
+/* .four_container {
   padding: 20px 90px;
   background-color: #ecf0f3;
   flex: 0.75;
@@ -527,7 +568,7 @@ button[type="submit"] {
   text-align: center;
   background-color: #293c4b;
   border-radius: 30px;
-  /* max-width: 309px; */
+  max-width: 309px;
   height: 309px;
   padding: 20px;
   position: relative;
@@ -550,23 +591,8 @@ button[type="submit"] {
 .first_container,
 .third_container {
   margin-right: 25px;
-}
-.container_heading {
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 30px;
-  /* font-weight: bold; */
-  color: #fdd015;
-  margin-bottom: 20px;
-}
-.container_subheading {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 18px;
-  /* font-weight: bold; */
-  color: #ffffff;
-  margin-bottom: 10px;
-}
+} */
+
 .increase {
   position: absolute;
   bottom: -30px;
@@ -757,8 +783,33 @@ button[type="submit"] {
     text-align: center;
     margin: 50px 0px;
   }
+  /* .bubble_Container1,
+  .bubble_Container2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  } */
+  .bubble_Container1 {
+    margin-bottom: -12%;
+  }
+  .bubble1_container,
+  .bubble3_container {
+    margin-right: 2%;
+  }
+  .wave_container {
+    width: 100%;
+  }
+  .bubble1_container,
+  .bubble2_container {
+    top: -90px;
+  }
+  .bubble3_container,
+  .bubble4_container {
+    bottom: -90px;
+  }
 }
-@media screen and (max-width: 1744px) and (min-width: 1110px) {
+@media screen and (max-width: 1744px) and (min-width: 1367px) {
   .middle_container {
     display: flex;
     flex-direction: column;
@@ -781,6 +832,9 @@ button[type="submit"] {
   .third_container {
     margin-right: 220px;
   } */
+  .bubble_Container1 {
+    margin-bottom: -45%;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -915,6 +969,13 @@ button[type="submit"] {
   }
   .wave_container {
     width: 100%;
-    height: 100%;
+  }
+  .bubble1_container,
+  .bubble2_container {
+    top: -90px;
+  }
+  .bubble3_container,
+  .bubble4_container {
+    bottom: -90px;
   }
 }
