--- a/css/style.css
+++ b/css/style.css
@@ -171,16 +171,10 @@ button[type="submit2"] {
 }
 
 .otp-content {
-  position: relative;
-  margin: 200px auto;
-  padding: 20px;
-  background: #ffffff;
-  /* border: 1px solid #1877f2; */
-  border-radius: 30px;
   display: flex;
   flex-direction: column;
+  justify-items: center;
   align-items: center;
-  max-width: 414px;
 }
 
 .close {
@@ -199,9 +193,10 @@ button[type="submit2"] {
   cursor: pointer;
 }
 .otp_text {
-  margin-top: 40px;
-  font-weight: 500;
-  font-size: 10px;
+  font-family: Montserrat;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 16px;
   line-height: 151.5%;
   display: flex;
   align-items: center;
@@ -233,16 +228,11 @@ button[type="submit2"] {
 }
 /*  */
 .signup-content {
-  position: relative;
-  margin: 200px auto;
-  padding: 20px 55px;
-  background: #ffffff;
-  /* border: 1px solid #1877f2; */
-  border-radius: 30px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  max-width: 414px;
+  justify-content: center;
+  margin: 20px 30px;
 }
 
 .signup_Heading {
@@ -791,6 +781,37 @@ button[type="submit"] {
   color: #fdd015;
   margin-bottom: 40px;
 }
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.footer_heading {
+  font-style: italic;
+  font-weight: bold;
+  font-size: 96px;
+  line-height: 144px;
+  text-align: center;
+  text-transform: capitalize;
+  color: #0c1116;
+}
+.store {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.google_play {
+  margin-right: 5px;
+}
+.copy_right {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 21px;
+  text-align: center;
+  color: #000000;
+}
 
 @media screen and (min-width: 2000px) {
   .early_heading {
@@ -1191,5 +1212,17 @@ button[type="submit"] {
 
   .wave_container2 {
     margin-bottom: 150px;
+  }
+  .footer_heading {
+    font-size: 48px;
+    line-height: 72px;
+  }
+
+  .copy_right {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    color: #000000;
   }
 }
