--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,19 @@ select,
 a :focus {
   outline: none !important;
 }
+/* .iframe-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+} */
 
 .nav_section {
   /* height: 91px; */
@@ -141,6 +154,74 @@ button[type="submit2"] {
   margin-bottom: 24px;
 }
 
+.container_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.label_container {
+  display: flex;
+  flex-direction: column;
+}
+.first_row {
+  margin-bottom: 30px;
+}
+.second_row {
+  margin-bottom: 30px;
+  margin-left: 50px;
+}
+.first_label {
+  background: linear-gradient(90deg, #18a0fb 1.5%, #fdd015 108.25%);
+  border-radius: 50px;
+  padding: 10px 30px;
+  margin: 10px 0;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 11px;
+  color: #ffffff;
+}
+.second_label {
+  background: linear-gradient(90deg, #1d915c 0%, #1877f2 100%);
+  border-radius: 50px;
+  padding: 10px 30px;
+  margin: 10px 0;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 11px;
+  color: #ffffff;
+}
+.third_label {
+  background: linear-gradient(90deg, #e25840 0%, #293c4b 100%);
+  border-radius: 50px;
+  padding: 10px 30px;
+  margin: 10px 0;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 11px;
+  color: #ffffff;
+}
+.forth_label {
+  background: linear-gradient(90deg, #189ff9 11.95%, #1d915c 89.04%);
+  border-radius: 50px;
+  padding: 10px 30px;
+  margin: 10px 0;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 11px;
+  color: #ffffff;
+}
 .coin_title {
   font-weight: 800;
   font-size: 18px;
@@ -298,8 +379,7 @@ select {
   border: none;
 }
 
-input[type="text"].mobileno,
-.otp_input::-webkit-input-placeholder {
+input[type="text"] .otp_input::-webkit-input-placeholder {
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
@@ -309,6 +389,17 @@ input[type="text"].mobileno,
   text-transform: capitalize;
   /* color: #c4c4c4; */
   color: #72686f;
+}
+input[type="text"] .mobileno::-webkit-input-placeholder {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 151.5%;
+  text-transform: capitalize;
+  color: #72686f;
+}
+.mobileno {
+  height: 200px;
+  font-size: 16px;
 }
 
 button[type="submit"] {
@@ -330,6 +421,7 @@ button[type="submit"] {
   max-height: 500px;
   width: 100%;
   height: 100%;
+  margin: 80px 0px;
 }
 
 .first_wrapper {
@@ -656,6 +748,7 @@ button[type="submit"] {
 }
 .people_inner_container {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   margin-top: 40px;
@@ -727,7 +820,7 @@ button[type="submit"] {
   text-align: center;
   color: #fdd015;
 }
-.working_steps_no {
+/* .working_steps_no {
   width: 83px;
   height: 83px;
   border-radius: 1000px;
@@ -739,7 +832,7 @@ button[type="submit"] {
   color: #0c1116;
   margin-bottom: 20px;
   margin-right: 20px;
-}
+} */
 .working_step {
   font-weight: 600;
   font-size: 24px;
@@ -765,13 +858,18 @@ button[type="submit"] {
   bottom: -200px;
   margin: auto;
 }
+.star_bonus {
+  position: absolute;
+  top: -35px;
+  right: -35px;
+}
 .heading_early {
   font-weight: bold;
   font-size: 24px;
   line-height: 36px;
   text-align: center;
   color: #ffffff;
-  margin-bottom: 40px;
+  margin: 40px 0px;
 }
 .slots {
   font-weight: bold;
@@ -811,6 +909,7 @@ button[type="submit"] {
   line-height: 21px;
   text-align: center;
   color: #000000;
+  margin: 40px 0px;
 }
 
 @media screen and (min-width: 2000px) {
@@ -927,6 +1026,55 @@ button[type="submit"] {
   .bubble4_container {
     bottom: -90px;
   }
+  .container_info {
+    display: flex;
+    flex-direction: column-reverse;
+    /* justify-content: space-between; */
+  }
+  .label_container {
+    display: flex;
+    flex-direction: column;
+  }
+  .first_row {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin-bottom: 10px;
+    margin-left: 10px;
+  }
+  .second_row {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 30px;
+    margin-left: 30px;
+  }
+  .second_label,
+  .forth_label {
+    margin-left: 5px;
+  }
+}
+@media screen and (max-width: 1367px) and (min-width: 1110px) {
+  .bubble_Container1 {
+    margin-bottom: -12%;
+  }
+  .bubble1_container,
+  .bubble3_container {
+    margin-right: 2%;
+  }
+  .wave_container {
+    width: 100%;
+    /* height: 100%; */
+  }
+  .bubble1_container,
+  .bubble2_container {
+    /* top: -90px; */
+    top: -190px;
+  }
+  .bubble3_container,
+  .bubble4_container {
+    /* bottom: -90px; */
+    bottom: -190px;
+  }
 }
 @media screen and (max-width: 1744px) and (min-width: 1367px) {
   .middle_container {
@@ -1034,6 +1182,7 @@ button[type="submit"] {
   .svg_container {
     margin-top: 30px;
     padding-left: 10px;
+    margin: 0px 0px;
   }
   .nav_section_inner {
     padding: 20px 3%;
@@ -1090,6 +1239,7 @@ button[type="submit"] {
   }
   .people_inner_container {
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
     /* display: inline; */
   }
@@ -1206,9 +1356,9 @@ button[type="submit"] {
     line-height: 36px;
     color: #fdd015;
   }
-  .working_steps_no {
+  /* .working_steps_no {
     margin-left: 30px;
-  }
+  } */
 
   .wave_container2 {
     margin-bottom: 150px;
@@ -1224,5 +1374,36 @@ button[type="submit"] {
     line-height: 21px;
     text-align: center;
     color: #000000;
+  }
+  .container_info {
+    display: flex;
+    flex-direction: column-reverse;
+    /* justify-content: space-between; */
+  }
+  .label_container {
+    display: flex;
+    flex-direction: column;
+  }
+  .first_row {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin-bottom: 10px;
+    margin-left: 10px;
+  }
+  .second_row {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 30px;
+    margin-left: 30px;
+  }
+  .second_label,
+  .forth_label {
+    margin-left: 5px;
+  }
+  .star_bonus {
+    position: absolute;
+    top: -35px;
+    right: -10px;
   }
 }
