--- a/css/style.css
+++ b/css/style.css
@@ -537,16 +537,16 @@ button[type="submit"] {
 
 .wave_container,
 .wave_container2 {
-  display: block;
+  display: inline-block;
   width: 100%;
-  /* height: 100%; */
   background-color: #3e3fc9;
 }
-.wave1 {
+
+/* .wave1 {
   width: 100%;
   height: 100%;
   display: inline-block;
-}
+} */
 
 .bubble_Container1,
 .bubble_Container2 {
@@ -725,7 +725,7 @@ button[type="submit"] {
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
-  align-self: center;
+  /* align-self: center; */
   margin: 30px 25%;
 }
 .people_bold {
@@ -752,6 +752,7 @@ button[type="submit"] {
   justify-content: space-between;
   align-items: center;
   margin-top: 40px;
+  flex-wrap: wrap;
 }
 .user_container {
   flex: 1;
@@ -926,6 +927,23 @@ button[type="submit"] {
   }
 }
 
+@media screen and (max-width: 880px) {
+  .top_wave_container {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .mobile_screens {
+    position: relative;
+    top: -250px;
+    width: 100%;
+  }
+  .working_steps_container {
+    margin-top: -290px;
+  }
+  .early_birds_container {
+    margin-top: -200px;
+  }
+}
 @media screen and (max-width: 1110px) {
   .first_wrapper {
     display: flex;
@@ -1148,6 +1166,25 @@ button[type="submit"] {
     left: 50%;
     transform: translate(-70%, -50%);
   }
+  .reward_wrapper {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    padding: 70px 0px;
+    margin: 0px 5px;
+  }
+  .reward_inner_wrapper {
+    flex: 0.5;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  .summary_heading {
+    text-align: center;
+    margin-bottom: 40px;
+  }
 }
 @media screen and (max-width: 480px) {
   .first_wrapper {
@@ -1340,10 +1377,10 @@ button[type="submit"] {
   .early_birds_container {
     margin-left: 10px;
     margin-right: 10px;
-    margin-top: -120px;
+    margin-top: -200px;
   }
   .working_steps_container {
-    margin-top: -90px;
+    margin-top: -140px;
   }
   .working_step {
     font-weight: 600;
@@ -1406,7 +1443,17 @@ button[type="submit"] {
     top: -35px;
     right: -10px;
   }
+  .heading_early {
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 27px;
+  }
+  .slots {
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 27px;
+  }
 }
-#mobileError{
+#mobileError {
   display: none;
 }
