--- a/css/style.css
+++ b/css/style.css
@@ -443,7 +443,7 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   color: #72686f;
 }
 .mobileno {
-  height: 70px;
+  height: 50px;
   font-size: 16px;
 }
 
@@ -467,8 +467,10 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   max-height: 500px;
   width: 100%;
   height: 100%;
-  /* margin: 20px 0px; */
-  margin: 40px 0px;
+  padding: 20px 0px;
+  /* margin: 0px 0px; */
+  margin-top: 50px;
+  margin-bottom: 100px;
 }
 .label_container {
   max-width: 570px;
@@ -979,7 +981,7 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   .early_heading {
   }
   .first_wrapper {
-    margin: 50px 15%;
+    margin: 50px 10%;
   }
   .reward_wrapper {
     margin: 0px 15%;
