--- a/css/style.css
+++ b/css/style.css
@@ -830,7 +830,7 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   margin-top: 60px;
   margin-left: 20%;
   margin-right: 20%;
-  padding: 30px 50px;
+  padding: 50px 50px;
   background: #293c4b;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   border-radius: 30px;
@@ -848,9 +848,10 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   line-height: 59px;
   color: #fdd015;
   flex: 0.8;
+  margin-bottom: 20px;
 }
 .user_text {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 24px;
   line-height: 30px;
   color: #ffffff;
